--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "phroute/phroute": "2.0.0",
         "firephp/firephp-core": "0.4.*",
         "twig/twig": "~1.23",
-        "symfony/http-foundation": "~2.7"
+        "symfony/http-foundation": "~2.7",
+        "monolog/monolog": "^1.17"
     },
 	"autoload": {
 		"psr-4": {
